# AIquiz_app

./: .env  .gitignore  CONSTITUTION.md  FRONTEND_OPTIMIZATION.md  OPENROUTER_MIGRATION.md  PLAN.md  README.md  TASK.md  app.py  debug_db.py  pyproject.toml  pyproject.toml.bak  requirements.txt  test_agent.py  vercel.json
.kiro/specs/mvp-testing-plan/: 00_START_HERE.md  EXECUTION_SUMMARY.md  FINAL_SUMMARY.md  INDEX.md  MANUAL_EXECUTION_GUIDE.md  MANUAL_TESTING_GUIDE.md  QUICK_START.md  README.md  README_FINAL.md  READY_TO_TEST.md  START_TESTING_NOW.md  SUMMARY.txt  TESTING_BREAKDOWN.md  TESTING_SUMMARY.md  TEST_EXECUTION_LOG.md  WHAT_WE_CREATED.md  curl-commands.sh  postman-collection.json  requirements.md  tasks.md  testing-checklist.md  testing-guide.md
alembic/: env.py
alembic/versions/: 6c544ded48dd_initial_migration.py
api/: index.py
frontend/: generate-icons.js  package-lock.json  package.json
frontend/public/: manifest.json  sw.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Breadcrumb.tsx  ErrorBoundary.tsx  FinalizeForm.tsx  Footer.tsx  Navigation.tsx  PWAInstaller.tsx  QuizRoom.tsx  ResultView.tsx  SEO.tsx
frontend/src/hooks/: useAccessibility.ts  useAnimations.ts  useMobilePerformance.ts  usePerformance.ts  useTouch.ts
frontend/src/lib/: api.ts  constants.ts  utils.ts
src/04fastapi_with_postgresql/: __init__.py  database.py  main.py  models.py
src/app/: main.py
src/app/agent/: core.py  prompts.py  tools.py
src/app/api/: quiz_routes.py
src/app/core/: config.py  database.py  (+1 more)
tests/: test_endpoints.py
(+21 files in other folders)
