[project]
name = "04fastapi-with-postgresql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rehan363", email = "rehan007313@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.45",
]

[project.scripts]
04fastapi-with-postgresql = "04fastapi_with_postgresql:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
